# ppchat-api

./: .env  .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  todo.md
notebooks/: test-chunks.ipynb
src/modules/ingestion/models/: __init__.py  document.py
src/modules/ingestion/services/: __init__.py  document_processor.py  pdf_loader.py  semantic_splitter.py  text_cleaner.py  text_splitter.py
src/modules/response/: __init__.py
src/modules/response/services/: generator.py
src/modules/retrieval/services/: __init__.py  retriever.py
src/modules/shared/services/: __init__.py  embedding_service.py  vector_store.py
