[project]
name = "ppchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface>=0.0.1",
    "huggingface-hub>=1.1.7",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["modules*"]
